test/testdata/test_kmesh_dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kmesh-dns
  namespace: kube-system
  labels:
    app: kmesh-dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kmesh-dns
  template:
    metadata:
      labels:
        app: kmesh-dns
    spec:
      containers:
      - name: kmesh-dns
        image: "localhost:5000/kmesh-dns:test"
        command:
          - /app/kmesh-dns
        args:
        - --xdsAddress=istiod.istio-system.svc.cluster.local:15010
        env:
          - name: POD_NAME
            valueFrom:
              fieldRef:
                fieldPath: metadata.name
          - name: POD_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          - name: INSTANCE_IP
            valueFrom:
              fieldRef:
                fieldPath: status.podIP
        ports:
        - containerPort: 15053
          name: dns-tcp
          protocol: TCP
        - containerPort: 15053
          name: dns-udp
          protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: kmesh-dns
  namespace: kube-system
spec:
  selector:
    app: kmesh-dns
  ports:
  - name: dns
    port: 15053
    protocol: UDP
  - name: dns-tcp
    port: 15053
    protocol: TCP
